@@ -55,6 +55,14 @@ static PyObject *referencer_document_set_field (PyObject *self, PyObject *args)
 }
 
 
+static PyObject *referencer_document_parse_bibtex (PyObject *self, PyObject *args)
+{
+	PyObject *bibtex = PyTuple_GetItem (args, 0);
+	((referencer_document*)self)->doc_->parseBibtex (PyString_AsString(bibtex));
+	return Py_BuildValue ("i", 0);
+}
+
+
 static void referencer_document_dealloc (PyObject *self)
 {
 	std::cerr << ">> referencer_document_dealloc\n";
@@ -85,6 +93,7 @@ static PyMethodDef referencer_document_methods[] = {
 	{"set_key", referencer_document_set_key, METH_VARARGS, "Set the key"},
 	{"get_filename", referencer_document_get_key, METH_VARARGS, "Get the filename"},
 	{"set_filename", referencer_document_set_key, METH_VARARGS, "Set the filename"},
+	{"parse_bibtex", referencer_document_parse_bibtex, METH_VARARGS, "Set fields from bibtex string"},
 	{NULL, NULL, 0, NULL}
 };
 
